# rustom8

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: context.rs  engine.rs  logger.rs  main.rs  parser.rs  types.rs
src/core/: context.rs  engine.rs  logger.rs  mod.rs  parser.rs  types.rs
src/steps/: mod.rs  print.rs  shell.rs  wait.rs
wf/: demo_workflow_1.toml
