[package]
name = "rustom8"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Konstantinos Vailas"
]
rust-version = "1.80.0"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1.0.98"
handlebars = "6.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.19"
serde_json= "1"